log
Fri, Mar 21, 2025 11:47:45 AM: 
 exercises.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:18:10: error: implicit declaration of function 'push_back' [-Werror=implicit-function-declaration]
          push_back(listaTemp, elemento);
          ^~~~~~~~~
exercises.c: At top level:
exercises.c:57:7: error: redefinition of 'crea_lista'
 List* crea_lista() {
       ^~~~~~~~~~
exercises.c:10:7: note: previous definition of 'crea_lista' was here
 List* crea_lista()
       ^~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
3f6cb15
Fri, Mar 21, 2025 11:48:31 AM: 
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:18:10: error: implicit declaration of function 'push_back' [-Werror=implicit-function-declaration]
          push_back(listaTemp, elemento);
          ^~~~~~~~~
exercises.c: At top level:
exercises.c:57:7: error: redefinition of 'crea_lista'
 List* crea_lista() {
       ^~~~~~~~~~
exercises.c:10:7: note: previous definition of 'crea_lista' was here
 List* crea_lista()
       ^~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
4fe677d
Fri, Mar 21, 2025 11:48:38 AM: 
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:18:10: error: implicit declaration of function 'push_back' [-Werror=implicit-function-declaration]
          push_back(listaTemp, elemento);
          ^~~~~~~~~
exercises.c: At top level:
exercises.c:57:7: error: redefinition of 'crea_lista'
 List* crea_lista() {
       ^~~~~~~~~~
exercises.c:10:7: note: previous definition of 'crea_lista' was here
 List* crea_lista()
       ^~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
8118e8a
Fri, Mar 21, 2025 11:48:42 AM: 
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:18:10: error: implicit declaration of function 'push_back' [-Werror=implicit-function-declaration]
          push_back(listaTemp, elemento);
          ^~~~~~~~~
exercises.c: At top level:
exercises.c:57:7: error: redefinition of 'crea_lista'
 List* crea_lista() {
       ^~~~~~~~~~
exercises.c:10:7: note: previous definition of 'crea_lista' was here
 List* crea_lista()
       ^~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
e768e41
Fri, Mar 21, 2025 11:48:58 AM: 
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:18:10: error: implicit declaration of function 'push_back' [-Werror=implicit-function-declaration]
          push_back(listaTemp, elemento);
          ^~~~~~~~~
exercises.c: At top level:
exercises.c:57:7: error: redefinition of 'crea_lista'
 List* crea_lista() {
       ^~~~~~~~~~
exercises.c:10:7: note: previous definition of 'crea_lista' was here
 List* crea_lista()
       ^~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
0778f39
Fri, Mar 21, 2025 11:50:34 AM: 
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:18:10: error: implicit declaration of function 'push_back' [-Werror=implicit-function-declaration]
          push_back(listaTemp, elemento);
          ^~~~~~~~~
exercises.c: At top level:
exercises.c:57:7: error: redefinition of 'crea_lista'
 List* crea_lista() {
       ^~~~~~~~~~
exercises.c:10:7: note: previous definition of 'crea_lista' was here
 List* crea_lista()
       ^~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
2f4cf93
Fri, Mar 21, 2025 11:51:13 AM: 
 exercises.c | 25 ++++++++++---------------
 1 file changed, 10 insertions(+), 15 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:51:10: error: implicit declaration of function 'push_back' [-Werror=implicit-function-declaration]
          push_back(L, elemento);
          ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
3d39613
Fri, Mar 21, 2025 11:51:52 AM: 
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:51:10: error: implicit declaration of function 'push_back' [-Werror=implicit-function-declaration]
          push_back(L, elemento);
          ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
5c0ee92
Fri, Mar 21, 2025 11:52:19 AM: 
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:51:10: error: implicit declaration of function 'push_back' [-Werror=implicit-function-declaration]
          push_back(L, elemento);
          ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
9d061e9
Fri, Mar 21, 2025 11:52:27 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:51:19: error: passing argument 1 of 'pushBack' from incompatible pointer type [-Werror=incompatible-pointer-types]
          pushBack(&L, elemento);
                   ^
In file included from exercises.c:6:0,
                 from test.c:5:
arraylist.h:20:6: note: expected 'List * {aka struct List *}' but argument is of type 'List ** {aka struct List **}'
 void pushBack(List *L, void *dato);
      ^~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
68a1b13
Fri, Mar 21, 2025 11:52:53 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
54af82f
Fri, Mar 21, 2025 11:57:02 AM: 
 exercises.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
c09dc8e
Fri, Mar 21, 2025 12:02:37 PM: 
 exercises.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
 tests:  3|2
total_score: 40/70
e3395bf
Sat, Mar 22, 2025  3:41:10 PM: 
 exercises.c | 22 +++++++++++++++++++++-
 1 file changed, 21 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
26c28c6
Sat, Mar 22, 2025  3:44:11 PM: 
 exercises.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  4|1
total_score: 50/70
c920997
Sat, Mar 22, 2025  6:19:23 PM: 
 exercises.c | 18 +++++++++++++++++-
 1 file changed, 17 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'parentesisBalanceados':
exercises.c:139:21: error: passing argument 2 of 'push' makes pointer from integer without a cast [-Werror=int-conversion]
          push(Pila, '(');
                     ^~~
In file included from exercises.c:7:0,
                 from test.c:5:
stack.h:11:6: note: expected 'void *' but argument is of type 'int'
 void push(Stack *stack, void *data) { pushFront(stack, data); }
      ^~~~
In file included from test.c:5:0:
exercises.c:143:10: error: this 'if' clause does not guard... [-Werror=misleading-indentation]
          if(top(Pila) == NULL);
          ^~
exercises.c:144:10: note: ...this statement, but the latter is misleadingly indented as if it is guarded by the 'if'
          {
          ^
cc1.exe: all warnings being treated as errors
Compilation failed
cbd21da
Sat, Mar 22, 2025  6:22:39 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'parentesisBalanceados':
exercises.c:143:10: error: this 'if' clause does not guard... [-Werror=misleading-indentation]
          if(top(Pila) == NULL);
          ^~
exercises.c:144:10: note: ...this statement, but the latter is misleadingly indented as if it is guarded by the 'if'
          {
          ^
cc1.exe: all warnings being treated as errors
Compilation failed
2818f9a
Sat, Mar 22, 2025  6:25:10 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|1
total_score: 50/70
3ce1d5a
Sat, Mar 22, 2025  6:27:48 PM: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  7|1
total_score: 60/70
bcd2b5d
Sat, Mar 22, 2025  6:45:34 PM: 
 exercises.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'parentesisBalanceados':
exercises.c:148:26: error: initialization makes integer from pointer without a cast [-Werror=int-conversion]
          char apertura = (char*)top(Pila);
                          ^
cc1.exe: all warnings being treated as errors
Compilation failed
e73fc91
Sat, Mar 22, 2025  6:45:59 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'parentesisBalanceados':
exercises.c:148:26: error: initialization makes integer from pointer without a cast [-Werror=int-conversion]
          char apertura = top(Pila);
                          ^~~
cc1.exe: all warnings being treated as errors
Compilation failed
7eb3d17
